# mc-mod-i18n

./: .gitignore  20260513凌晨代办项.md  AGENTS.md  FTBQuests方案.md  FTBQuests测试推荐.md  LICENSE  README.md  bash.exe.stackdump  mc-mod-i18n.spec  pyproject.toml  sqlite改造.md  sqlite补充.md  ui主题配色.md  ui优化方案.md  主题色改动.md  代办方案.md  多jar优化.md  工作区优化.md  工具全局动效优化.md  帮助和文档实施方案.md  拓展规划.md  接入方案.md  方案.md  桌面版本方案.md  添加体系语言切换功能方案.md  自定义字体改造.md  补充方案.md  集成方案.md
logo/: branding.json
scripts/: build_exe.ps1  install_local_python312.ps1  mc_mod_i18n_launcher.py  ui_smoke_test.mjs
tests/: test_app_db.py  test_argos_adapter.py  test_azure_translator_adapter.py  test_build_exe_script.py  test_checkpoint_config_hash.py  test_cli_dry_run.py  test_config_preset_management.py  test_config_presets.py  test_core.py  test_deep_translator_adapter.py  test_deep_translator_live.py  test_desktop.py  test_ftbquests.py  test_glossary_management.py  test_hardcoded_categories.py  test_help_docs.py  test_help_docs_api.py  test_help_docs_content.py  test_i18n_coverage.py  test_job_history.py  test_json_language_mode.py  test_lang.py  test_libretranslate_adapter.py  test_offline_glossary_translate_api.py  test_pack_icon.py  test_patch_mod_template.py  test_preflight.py  test_process_zip_failures.py  test_provider_connection.py  test_report_exports.py  test_response_guard.py  test_retry_api_progress.py  test_retry_failures.py  test_translation_memory.py  test_translation_memory_management.py  test_translation_memory_query.py  test_translator_prompt.py  test_ui_i18n.py  test_validator.py  (+4 more)
(+75 files in other folders)
