[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-mod-i18n"
version = "0.1.0"
description = "Generate Chinese Minecraft mod resource packs from mod JAR language files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mc-mod-i18n = "mc_mod_i18n.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
